完成用户信息

--- a/接口.md
+++ b/接口.md
@@ -1,4 +1,6 @@
-（1）获取作者消息列表：
+（1）获取作者分享信息列表：
+
+请求参数:
 
 url: https://cnodejs.org/api/v1/topics
 
@@ -11,4 +13,34 @@ method:  get
 ​          limit:20,
 
 ​    }
+
+返回参数：
+
+data: {
+
+​    success:  true,
+
+​     data: []  
+
+  }
+
+（1）获取作者信息：
+
+请求参数:
+
+url: https://cnodejs.org/api/v1/user/${this.$route.params.name}
+
+method:  get
+
+返回参数：
+
+data: {
+
+​    success:  true,
+
+​     data: {}
+
+  }
+
+
 
