完成作者分享信息详情

--- a/接口.md
+++ b/接口.md
@@ -24,7 +24,7 @@ data: {
 
   }
 
-（1）获取作者信息：
+（2）获取作者信息：
 
 请求参数:
 
@@ -41,6 +41,50 @@ data: {
 ​     data: {}
 
   }
+
+（3）获取作者分享信息详情：
+
+请求参数:
+
+url: https://cnodejs.org/api/v1/topic/${this.$route.params.id}
+
+method:  get
+
+ params:{
+
+​         mdrender:true
+
+​        }
+
+返回参数：
+
+data: {
+
+​    success:  true,
+
+​     data: {}
+
+  }
+
+（4）获取作者信息：
+
+请求参数:
+
+url: https://cnodejs.org/api/v1/user/${this.$route.params.name}
+
+method:  get
+
+返回参数：
+
+data: {
+
+​    success:  true,
+
+​     data: {}
+
+  }
+
+
 
 
 
